# BTEngine

./: .gitignore  CMakeLists.txt  README.md
BTEngineLib/: AudioClip.cpp  CMakeLists.txt  ColliderComponent.cpp  ColliderComponent.h  Minigin.cpp
BTEngineUnitTests/: CMakeLists.txt
BTEngineVisualEditor/: CMakeLists.txt
BumblebeeEditor/: CMakeLists.txt  main.cpp
BumblebeeLib/: Animation.cpp  CMakeLists.txt  Main.cpp  Minigin.cpp  MiniginPCH.cpp  MiniginPCH.h  PhysicsManager.cpp  RGBColor.h  Renderer.cpp  Renderer.h
BumblebeeLib/AudioSystem/: AudioClip.cpp  AudioClipImpl.cpp
BumblebeeLib/AudioSystem/NullAudioSystem/: NullAudioSystem.cpp  NullAudioSystem.h
BumblebeeLib/AudioSystem/WindowsAudioSystem/: WindowsAudioSystem.cpp  WindowsAudioSystem.h  WindowsAudioSystemImpl.cpp  WindowsAudioSystemImpl.h
BumblebeeLib/Components/: BaseComponent.cpp  BaseComponent.h
BumblebeeLib/Components/AchievementComponent/: AchievementSystem.cpp  AchievementSystem.h
BumblebeeLib/Components/AnimationComponent/: AnimationComponent.cpp  AnimationComponent.h
BumblebeeLib/Components/AnimationComponent/Animation/: Animation.cpp  Animation.h
BumblebeeLib/Components/ColliderComponent/: ColliderComponent.cpp  ColliderComponent.h
BumblebeeLib/Components/ColliderComponent/BoxCollider/: BoxCollider.cpp  BoxCollider.h
BumblebeeLib/Components/ColliderComponent/CircleCollider/: CircleCollider.cpp  CircleCollider.h
BumblebeeLib/Components/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.h
BumblebeeLib/Components/FPSComponent/: FPSComponent.cpp  FPSComponent.h
BumblebeeLib/Components/ImguiRenderComponent/: ImgGuiRenderComponent.cpp  ImgGuiRenderComponent.h
BumblebeeLib/Components/ImguiRenderComponent/ImguiPlotComponent/: ImGuiPlotComponent.cpp  ImGuiPlotComponent.h
BumblebeeLib/Components/RenderComponent/: RenderComponent.cpp  RenderComponent.h
BumblebeeLib/Components/RigidBodyComponent/: RigidBodyComponent.cpp  RigidBodyComponent.h
BumblebeeLib/Components/TextComponent/: Font.cpp  TextComponent.cpp  TextComponent.h
BumblebeeLib/Components/TransformComponent/: Transform.cpp  TransformComponent.cpp  TransformComponent.h
BumblebeeLib/Deprecated/: CacheDataGenerator.cpp  InputManager.cpp  TextObject.cpp  TextObject.h
BumblebeeLib/GameObject/: GameObject.cpp  GameObject.h
BumblebeeLib/Imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_internal.h  imgui_plot.cpp  imgui_plot.h  imgui_tables.cpp  imgui_widgets.cpp
BumblebeeLib/Input/: InputManager2.cpp  InputManager2.h
BumblebeeLib/Input/Commands/: Command.cpp
BumblebeeLib/Input/Controllers/: XboxController.cpp  XboxController.h  XboxControllerImpl.cpp  XboxControllerImpl.h
BumblebeeLib/Input/Keyboards/: Keyboard.cpp  Keyboard.h
BumblebeeLib/Observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
BumblebeeLib/Physics/: PhysicsManager.cpp  PhysicsManager.h
BumblebeeLib/Physics/ContactListener/: ContactListener.cpp
BumblebeeLib/Physics/World/: World.cpp  World.h
BumblebeeLib/Rendering/: Renderer.cpp  Renderer.h  Texture2D.cpp
BumblebeeLib/ResourceManager/: ResourceManager.cpp
BumblebeeLib/Scene/: Scene.cpp  Scene.h  SceneManager.cpp
BumblebeeLib/Services/AudioService/: AudioSystemLocator.cpp  AudioSystemLocator.h
BumblebeeLib/Structs/: InternalStructs.h
BumblebeeLib/Time/: TimeManager.cpp
BumblebeeUnitTests/: CMakeLists.txt  UnitTests.cpp
BurgerTime/: BurgerComponent.cpp  BurgerComponent.h  BurgerEngine.cpp  CMakeLists.txt  Commands.cpp  Commands.h  EnemyComponent.cpp  EnemyComponent.h  IngredientPartComponent.cpp  IngredientPartComponent.h  IngridientComponent.cpp  IngridientComponent.h  LevelComponent.cpp  LevelComponent.h  LivesComponent.cpp  LivesComponent.h  MrPepperComponent.cpp  MrPepperComponent.h  PlatformComponent.cpp  PlatformComponent.h  PointsComponent.cpp  PointsComponent.h
